// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlightMatches(query, text) matches contains: been-kat-br[eak]able 1`] = `
<span>
  <span>
    <span
      key="text-1"
    >
      been-kat-br
    </span>
    <mark
      key="eak2"
    >
      eak
    </mark>
    <span
      key="text-3"
    >
      able
    </span>
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches letters, in sequence: h[i]ghl[i]ght[i]ng-the-th[i]ngs 1`] = `
<span>
  <span>
    <span
      key="text-1"
    >
      h
    </span>
    <mark
      key="i2"
    >
      i
    </mark>
    <span
      key="text-3"
    >
      ghl
    </span>
    <mark
      key="i4"
    >
      i
    </mark>
    <span
      key="text-5"
    >
      ght
    </span>
    <mark
      key="i6"
    >
      i
    </mark>
    <span
      key="text-7"
    >
      ng-the-th
    </span>
    <mark
      key="i8"
    >
      i
    </mark>
    <span
      key="text-9"
    >
      ngs
    </span>
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the acronym: [e]xactly [e]xact sleek bespoke 1`] = `
<span>
  <span>
    <mark
      key="e2"
    >
      e
    </mark>
    <span
      key="text-3"
    >
      xactly 
    </span>
    <mark
      key="e4"
    >
      e
    </mark>
    <span
      key="text-5"
    >
      xact sleek bespoke
    </span>
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the acronym: [e]xactly[E]xactSleekBespoke 1`] = `
<span>
  <span>
    <mark
      key="e2"
    >
      e
    </mark>
    <span
      key="text-3"
    >
      xactly
    </span>
    <mark
      key="E4"
    >
      E
    </mark>
    <span
      key="text-5"
    >
      xactSleekBespoke
    </span>
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the start of a word: camelcase[Cas]e 1`] = `
<span>
  <span>
    <span
      key="text-1"
    >
      camelcase
    </span>
    <mark
      key="Cas2"
    >
      Cas
    </mark>
    <span
      key="text-3"
    >
      e
    </span>
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the start of a word: kebabcase-[ca]se 1`] = `
<span>
  <span>
    <span
      key="text-1"
    >
      kebabcase-
    </span>
    <mark
      key="ca2"
    >
      ca
    </mark>
    <span
      key="text-3"
    >
      se
    </span>
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the start of the text: [eg]g ego 1`] = `
<span>
  <span>
    <mark
      key="eg1"
    >
      eg
    </mark>
    <span
      key="text-2"
    >
      g ego
    </span>
  </span>
</span>
`;
